...
        android:layout_marginStart="@dimen/default_gap"
        android:paddingTop="20sp"
        android:text="@string/members_adding_tv_members"
        android:textSize="20sp"/>

    <!-- User input for the email address of the invited users --><LinearLayout
    android:id="@+id/layout_add_member"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/default_gap"
    android:layout_marginEnd="@dimen/default_gap"
    android:layout_marginStart="@dimen/default_gap">
...
        android:background="@android:color/transparent"
        android:contentDescription="@string/Logo_QR"
        android:cropToPadding="false"
        android:src="@drawable/qr_code"/>

    <EditText
        android:id="@+id/edit_text_add_member"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_weight="0.8"
        android:hint="@string/members_adding_hint_invite_new_members"
...
