...
                android:layout_height="47dp"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="@string/event_creation_tv_event_name"/>

            <EditText
                android:id="@+id/ui_edit_event_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:hint="@string/event_creation_hint_event_name"
                android:inputType="text"
                android:textColor="@color/secondaryTextColor"/>
...
