<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GroupUp</string>

    <!-- ToolbarActivity -->
    <string name="toolbar_image_left">Most left icon in toolbar</string>
    <string name="toolbar_image_second_right">Second most right icon in toolbar</string>
    <string name="toolbar_image_right">Most right icon in toolbar</string>
    <string name="toolbar_title_add_members">Add Members</string>
    <string name="toolbar_title_create_event">Create Event</string>
    <string name="toolbar_title_user_profile">User Profile</string>

    <!-- Welcome page -->
    <string name="welcome_view_powered_by">Powered by Flying Monkeys Team </string>
...
    <string name="event_creation_hint_event_description">Enter Description</string>
    <string name="event_creation_tv_start_time">Start time : </string>
    <string name="event_creation_tv_end_time">End time : </string>
    <string name="event_creation_tv_description">Description : </string>
    <string name="event_creation_button_add_members">Add members</string>
    <string name="event_creation_tv_number_of_members">Number of members :</string>
    <string name="event_creation_toast_non_empty_event_name">Give a name to your event !</string>
    <string name="event_creation_toast_event_name_too_long">The name of the event is too long.</string>
    <string name="event_creation_toast_event_start_before_now">Are you planning to go back to the past ?</string>
    <string name="event_creation_toast_event_end_before_begin">Your event ends before it begins.</string>
    <string name="event_creation_toast_event_last_1_minute">Your event should last for at least 1 minute.</string>
    <string name="event_creation_error_cant_add_yourself">You\'ll be automatically added to the event.</string>

    <!-- Members Adding UI -->
...
    <!-- activity_display_qr-->
    <string name="QR_code">QR Code</string>

    <!-- Event Description -->
    <string name="event_description_tv_start_date">Start Date : </string>
    <string name="event_description_tv_end_date">End Date : </string>
    <string name="event_description_tv_description">Description : </string>
    <string name="event_description_tv_members">Members : </string>
    <string name="no_event_description">NO_EVENT_DESCRIPTION</string>
    <string name="no_event_end_date">NO_EVENT_END_DATE</string>
    <string name="no_event_name">NO_EVENT_NAME</string>
    <string name="no_event_start_date">NO_EVENT_START_DATE</string>
    <string name="change_the_description_of_the_event">Add description of the event</string>
...
    <string name="alert_dialog_ask_enable_provider_title">Please Grant Permission</string>
    <string name="alert_dialog_ask_enable_provider_message">To be able to share your live location
        during the event and invite friends via QR Scanner you have to grant GroupUp! the
        permission to use your location and camera.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_title_delete_event">Deleting Event</string>
    <string name="title_activity_map">Map</string>

    <!-- File Management -->
    <string name="file_management_tv_description">Here you can see the files of the event and add some new ones !</string>
    <string name="file_management_button_add_file" tools:keep="@string/file_management_button_add_file">Add file</string>
    <string name="file_management_toast_error_file_uri">An error occurred when recovering the media</string>
    <string name="file_management_toast_error_file_not_created">"Error While creating the file"</string>

    <!--Event Invitation -->
    <string name="event_invitation_title">You are invited to an event !</string>
    <string name="event_invitation_dialog_decline">Decline</string>
    <string name="event_invitation_dialog_accept">Accept</string>

    <string name="event_invitation_dialog_name">Event Name :</string>
    <string name="event_invitation_dialog_start">Start Date :</string>
    <string name="event_invitation_dialog_end">End Date :</string>
    <string name="event_invitation_dialog_description">Description :</string>
    <string name="event_invitation_dialog_members">Members in the event :</string>
...

    <!-- Full screen file -->
    <string name="full_screen_image_content_description">Image to be displayed in full screen</string>
    <string name="full_screen_video_content_description">Video to be displayed in full screen</string>

    <!-- Points of Interest -->
    <string name="poi_title_hint">title</string>
    <string name="poi_description_hint">description</string>
    <string name="poi_dialog_title">Add a Point Of Interest</string>
    <string name="poi_action_title">What you want to do, huh?</string>
    <string name="poi_action_remove">Remove</string>
    <string name="poi_action_cancel">Cancel</string>
    <string name="poi_create_cancel">Cancel</string>
    <string name="poi_create_add">Add</string>
    <string name="map_activity_poi_instruction">You can add Points Of Interest by long clicking on the map.</string>
    <string name="poi_action_route">Bring me there</string>

</resources>


