...

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/event_description_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/text_margin"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
...

    <include
        android:id="@+id/include"
        layout="@layout/content_scrolling"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/remove_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="mini"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="right|bottom"
...
