...
            style="@style/EventCategories"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/event_description_tv_description"
            android:layout_below="@+id/event_description_tv_end_date"/>

        <EditText
            android:id="@+id/event_description_description"
            style="@style/EventFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_description_tv_description"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
...
