...
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/tap_view_map"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@drawable/borders_unselected"
            android:gravity="center"
            android:text="@string/event_description_tap_view_map"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/tap_view_details"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@drawable/borders_unselected"
            android:gravity="center"
...
                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <include layout="@layout/content_event_description"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/remove_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:fabSize="mini"
                app:layout_anchor="@+id/app_bar"
                app:layout_anchorGravity="bottom|right"
...
        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                         xmlns:app="http://schemas.android.com/apk/res-auto"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.design.widget.CoordinatorLayout>

...
